--- a/FileShare/Views/Home/Index.cshtml
+++ b/FileShare/Views/Home/Index.cshtml
@@ -3,6 +3,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Index page</p>
+    <h1 class="display-4">Select file to upload</h1>
+    <p>Select</p>
+
+    <form asp-action="Upload" asp-controller="Home" method="post" enctype="multipart/form-data">
+        <input type="file" name="file"/><br>
+        <input type="submit" value="Upload"/>
+    </form>
 </div>
