--- a/FileShare/Views/Home/Index.cshtml
+++ b/FileShare/Views/Home/Index.cshtml
@@ -10,7 +10,9 @@
     <h1 class="display-4" style="color: steelblue">Select file to upload</h1>
     
     <form asp-action="Upload" asp-controller="Home" method="post" enctype="multipart/form-data">
-        <input class="btn-outline-info" type="file" name="File"/><br/>
+        <input class="btn-outline-info" type="file" name="File" /><br/>
         <input class="btn-primary" type="submit" value="Upload"/>
     </form>
+
+    <p class="text-muted">Maximum 25MB</p>
 </div>
