--- a/src/Presentation/FileShare.Web/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/FileShare.Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,8 @@
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/dropzone/min/dropzone.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/base-configuration.css" asp-append-version="true" />
+
 </head>
 <body>
     <header>
